fixed bug where during mobile view carousel buttons would overlap navbar

--- a/slugmart/src/components/Navbar.css
+++ b/slugmart/src/components/Navbar.css
@@ -88,7 +88,7 @@ html {
     left: 0;
     width: 100%;
     background-color: #1877f2;
-    z-index: 1;
+    z-index: 10;
     list-style: none;
     padding-left: 0;
   }
